# ChangeLog for net-p2p/transmission
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/ChangeLog,v 1.101 2009/11/21 19:57:14 maekke Exp $

  21 Nov 2009; Markus Meier <maekke@gentoo.org> transmission-1.75.ebuild:
  x86 stable, bug #289629

  06 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  transmission-1.76.ebuild:
  Accept openssl USE flag for curl (closes bug #292014).

*transmission-1.76 (26 Oct 2009)

  26 Oct 2009; Patrick Lauer <patrick@gentoo.org> +transmission-1.76.ebuild:
  Bump, closes #290496

  24 Oct 2009; nixnut <nixnut@gentoo.org> transmission-1.75.ebuild:
  ppc stable #289629

  18 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  transmission-1.75.ebuild:
  amd64 stable wrt #289629

  29 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  transmission-1.75.ebuild:
  Install transmission.png even if USE gtk isn't enabled wrt #282136, thanks
  to Jouni Rinne for reporting.

  29 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  transmission-1.72.ebuild, transmission-1.75.ebuild:
  Change x11-libs/gtk+ depend to 2.12 wrt #286586, thanks to Robin ESTEVE
  for reporting.

  27 Sep 2009; nixnut <nixnut@gentoo.org> transmission-1.72.ebuild:
  ppc stable #280584

*transmission-1.75 (19 Sep 2009)

  19 Sep 2009; Patrick Lauer <patrick@gentoo.org> +transmission-1.75.ebuild:
  Bump to 1.75, fixes #285081

  16 Sep 2009; Olivier Crête <tester@gentoo.org> transmission-1.72.ebuild:
  Stable on amd64, bug #280584

  14 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  transmission-1.72.ebuild:
  stable x86, bug 280584

*transmission-1.74 (10 Sep 2009)

  10 Sep 2009; Patrick Lauer <patrick@gentoo.org> +transmission-1.74.ebuild:
  Bump, fixes #282766

  13 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  transmission-1.73.ebuild, metadata.xml:
  USE dht wrt #278393, thanks to Jeroen Roovers and Mark A. Rada.

*transmission-1.73 (13 Aug 2009)
