@@ -3,8 +3,8 @@ AUX transmission-daemon.initd.2 3953 RMD160 f78589fe9de1db4160aa7c6333cef1fc835c
 DIST transmission-1.72.tar.bz2 4810233 RMD160 eeb5e68d328c8e0e15a2f8ffeea38040d2be84f8 SHA1 18d25c031d4aaf3b8ae546d5b4b492672214ef0a SHA256 71fa9f8a8c946111a991b7bc7ccc5182578dfc77a301b7e801791cc4b3c15353
 DIST transmission-1.75.tar.bz2 5053161 RMD160 356d82490c02ac96b8c952aa10195c4066e6cec3 SHA1 8ce610a9d743cdd6fa6495824d03416bee9a3512 SHA256 a01bcf7718876d96eeb423a58247b89158bf0bc5d2bed414009e5fb83ff76c9e
 DIST transmission-1.76.tar.bz2 5147323 RMD160 c849ed6d1860e5e039fb902f49951d45ec205dc3 SHA1 27528ea9cf92dcaecee38b02940dc3086c63253c SHA256 b221d6ecec0c5ca9908f17ae7d56ce139d317faaa0c106e99fb321130280f151
-EBUILD transmission-1.72.ebuild 2225 RMD160 f33ec512852d64af70483fff6d70a32880cee9f9 SHA1 353c9781e66ce6c396934512770aabd38ca21ace SHA256 737c08dbef8f2ee23f07f6b233dea5d36c891df531172dab398e96eb8b91fe58
-EBUILD transmission-1.75.ebuild 2235 RMD160 7e129972e74e43594d44dd361938e5186e1c9f5c SHA1 94be87d12c2aca91905de97002c374dd795bb3d4 SHA256 41abeb15a2ca046d1f28d986e3efaead8a95b925cf8ab6600aaea935fda2fd7f
-EBUILD transmission-1.76.ebuild 2272 RMD160 f0df6df7d6edbafc5493d76c3cb2233d81ad5c62 SHA1 10d31f53b658e8187e30b2b49c2e2b6876a2f691 SHA256 bba23ac1da80afbefc3b07d6de38d0e164ccf8a94a5f5b2c487e2183210548bf
-MISC ChangeLog 15356 RMD160 d231f98f245691d99c6e4167b3adb5d546e10619 SHA1 a500090148ef8f33b998c77b3a42b0162b5152c0 SHA256 7d36288a2cd723dc8a5059435a447bc8eb3268bcd48b3ec30d33ae6d154419ef
+EBUILD transmission-1.72.ebuild 2223 RMD160 25ae87a6d0578dadf83eb327767fd73711d20812 SHA1 1288ce71fb8a07059cfb057aed63594a5a775448 SHA256 fb24879ab58218b2df439fb01424f759a53d7e1b3a3b48b53c9b74ba77acb9ef
+EBUILD transmission-1.75.ebuild 2236 RMD160 a09ffcc7c6097b3b156e60043fba640d4e5dcc3e SHA1 d65781a8c141e1ed3fa93cd36b0d0090b567d032 SHA256 a6f368815da0cb222639341f712caf721bb4fb0accda1dff7ce4a10a89b92075
+EBUILD transmission-1.76.ebuild 2270 RMD160 2dabdde1330c96dd9350f579420cc338a5440624 SHA1 e29bfc3ab855f765eabfa9ba8875aad1bcf771de SHA256 01ebff7eeb82e83c85f4adbfd9434cb06a15e7ff0dd01fbc34359eef8103b531
+MISC ChangeLog 15510 RMD160 c66bf3e667bd7bac9263fd4bf7dc59bb2a0e1d17 SHA1 d120e942aa0e6c402b47cb457f3db9b1a1fd6775 SHA256 4f2817ab26a8bd5615920a2a48e2e7820a8d337356fe030bf37f3b73b427932b
 MISC metadata.xml 246 RMD160 61887304f5b2374f154445c651ea074e01711bd1 SHA1 71a423b07d551e47bc96d5a9a779085fcca1686a SHA256 f66773668c6a53ac9c29d25469070d994d17df46c00f903e2750153f745c3e10
