@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/transmission-1.75.ebuild,v 1.6 2009/11/21 19:57:14 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/transmission-1.75.ebuild,v 1.7 2009/12/29 18:03:00 armin76 Exp $
 
 EAPI=2
 inherit autotools eutils fdo-mime gnome2-utils qt4
